# stock_agent

./: MODEL_API_README.md  README.md  STOCK_TREND_GUIDE.md  pyproject.toml
stock_agents/: __init__.py  agentic_prediction.py  app.py  feedback.py  financial_documents.py  fundamentals.py  model_service.py  models.py  service.py
stock_agents/ui/: app.js  index.html  styles.css
stock_agents_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_agentic_prediction.py  test_financial_documents.py  test_ui.py
trend_analyzer/: __init__.py  final_year_project_the_end.py  ohlcv_lstm_cnn.py
